logs/Slang/chapter-8/8.21--abstract_class_inst.sv.log
name: abstract_class_inst
description: instantiating abstract class
should_fail: 1
tags: 8.21
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.21--abstract_class_inst.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.21--abstract_class_inst.sv:8:2: error: language feature not yet supported
	virtual class base_cls;
	^~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.21--abstract_class_inst.sv:12:2: error: language feature not yet supported
	class test_cls extends base_cls;
	^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.21--abstract_class_inst.sv:19:2: error: use of undeclared identifier 'base_cls'
	base_cls test_obj;
	^~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-8/8.21--abstract_class_inst.sv:22:14: error: language feature not yet supported
		test_obj = new;
		           ^~~
